--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <!-- Kitchenware all cards -->
                         <div class="grid grid-cols-3 gap-5">
                             <!-- Kitchenware card 1 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div id="kitchen-accessories" class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod1.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -55,12 +55,12 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
-                                    <h2 class="card-title block">K. Accessories</h2>
-                                    <p class="text-base text-gray-400">39.00 TK</p>
+                                    <h2 class="card-title block">K. Spon Accessories</h2>
+                                    <p id="product-price" class="text-base text-gray-400">39.00 TK</p>
                                 </div>
                             </div>
                             <!-- Kitchenware card 2 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod2.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <!-- Kitchenware card 3 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod3.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -100,7 +100,7 @@
                         <!-- Sportswear all cards -->
                         <div class="grid grid-cols-3 gap-5">
                             <!-- Sportswear card 1 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod4.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <!-- Sportswear card 2 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod5.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                             <!-- Sportswear card 3 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod6.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -155,7 +155,7 @@
                         <!-- Furniture all cards -->
                         <div class="grid grid-cols-3 gap-5">
                             <!-- Furniture card 1 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod7.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -165,12 +165,12 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
-                                    <h2 class="card-title block">Sports Back Cap</h2>
+                                    <h2 class="card-title block">Single Relax Chair</h2>
                                     <p class="text-base text-gray-400">39.00 TK</p>
                                 </div>
                             </div>
                             <!-- Furniture card 2 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod8.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -180,12 +180,12 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
-                                    <h2 class="card-title block">Full Jersey Set</h2>
+                                    <h2 class="card-title block">Children play</h2>
                                     <p class="text-base text-gray-400">25.00 TK</p>
                                 </div>
                             </div>
                             <!-- Furniture card 3 -->
-                            <div class="card card-compact p-7 bg-base-100 shadow-sm">
+                            <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod9.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
@@ -195,7 +195,7 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
-                                    <h2 class="card-title block">Sports cates</h2>
+                                    <h2 class="card-title block">Flexible Sofa</h2>
                                     <p class="text-base text-gray-400">49.00 TK</p>
                                 </div>
                             </div>
@@ -206,21 +206,22 @@
                     <div class="h-40 bg-white p-5 rounded-lg">
                         <h3 class="text-xl font-semibold mb-3">Have coupon?</h3>
                         <div class="join">
-                            <input class="input input-bordered join-item" placeholder="Coupon code"/>
-                            <button class="btn join-item rounded-r-lg bg-[#E527B2] text-white hover:text-black">Apply</button>
+                            <input id="coupon-field" class="input input-bordered join-item" placeholder="Coupon code"/>
+                            <button id="coupon-btn" class="btn join-item rounded-r-lg bg-[#E527B2] text-white hover:text-black" disabled>Apply</button>
                           </div>
                     </div>
                     <div class="h-96 bg-white p-5 mt-5 rounded-lg">
-                        <div>
+                        <div id="products-list">
+                            <h2 class="text-xl font-bold mb-2">Product list</h2>
 
                         </div>
-                        <div class="border-y py-3">
-                            <p class="mb-2"><strong>Total Price:</strong> <span class="text-gray-400">00 TK</span></p>
-                            <p class="mb-2"><strong>Discount:</strong> <span class="text-gray-400">00 TK</span></p>
-                            <p class="mb-2"><strong>Total:</strong> <span class="text-gray-400">00 TK</span></p>
+                        <div class="border-y py-3 my-3">
+                            <p class="mb-2"><strong>Total Price:</strong> <span class="text-gray-400">00 </span><span class="text-gray-400">TK</span></p>
+                            <p class="mb-2"><strong>Discount:</strong> <span id="discount" class="text-gray-400">00 <span>TK</span class="text-gray-400"></span></p>
+                            <p class="mb-2"><strong>Total:</strong> <span id="grand-total" class="text-gray-400">00 </span><span class="text-gray-400">TK</span></p>
                         </div>
                         <div class="text-center">
-                            <button class="btn btn-wide mt-6 bg-[#E527B2] text-white hover:text-black">Wide</button>
+                            <button id="purchase-btn" class="btn btn-wide mt-6 bg-[#E527B2] text-white hover:text-black" disabled>Make Purchase</button>
                         </div>
                     </div>
                 </div>
