--- a/index.html
+++ b/index.html
@@ -20,30 +20,32 @@
     </header>
     <main>
         <!-- Banner section -->
-        <section class="bg-amber-50 py-28">
-            <div class="container max-w-7xl mx-auto flex justify-between items-center">
+        <section class="bg-amber-50 lg:py-28 md:py-20 py-16">
+            <div class="container max-w-7xl mx-auto flex justify-between items-center lg:flex-row flex-col-reverse">
                 <div class="text-center">
                     <h6 class="font-semibold text-base">---SALE FEVER---</h6>
-                    <h2 class="text-5xl font-bold my-8 leading-tight">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h2>
+                    <h2 class="lg:text-5xl md:text-5xl text-3xl font-bold lg:my-8 my-5 leading-tight">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h2>
                     <p class="text-base font-semibold inline mr-3">Use Promo Code</p>
                     <button class="bg-[#E527B2] text-white py-2 px-8 rounded-lg font-medium inline">SELL200</button>
                 </div>
-                <div>
-                    <img src="images/Summer 1.png" alt="" class="w-4/5">
+                <div class="flex justify-center mb-7 lg:mb-0">
+                    <img src="images/Summer 1.png" alt="" class="lg:w-4/5 w-3/5 self-center">
                 </div>
               </div>
         </section>
+
+
         <section class="container max-w-7xl mx-auto">
-            <div class="flex">
-                <div class="w-3/4">
+            <div class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
+                <div class="lg:w-3/4">
                     <!-- Kitchenware container -->
-                    <div class="py-14">
+                    <div class="py-14 mx-10 lg:mx-0">
                         <div class="pb-10">
                             <h2 class="text-4xl font-bold">Kitchenware</h2>
                         </div>
     
                         <!-- Kitchenware all cards -->
-                        <div class="grid grid-cols-3 gap-5">
+                        <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-5 md:gap-10 gap-5">
                             <!-- Kitchenware card 1 -->
                             <div id="kitchen-accessories" class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod1.png" alt="Shoes" /></figure>
@@ -93,12 +95,12 @@
                     </div>
 
                     <!-- Sportswear container -->
-                    <div class="py-14">
+                    <div class="py-14 mx-10 lg:mx-0">
                         <div class="pb-10">
                             <h2 class="text-4xl font-bold">Sportswear</h2>
                         </div>
                         <!-- Sportswear all cards -->
-                        <div class="grid grid-cols-3 gap-5">
+                        <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-5 md:gap-10 gap-5">
                             <!-- Sportswear card 1 -->
                             <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod4.png" alt="Shoes" /></figure>
@@ -148,12 +150,12 @@
                     </div>
 
                     <!-- Furniture container -->
-                    <div class="py-14">
+                    <div class="py-14 mx-10 lg:mx-0">
                         <div class="pb-10">
                             <h2 class="text-4xl font-bold">Furniture</h2>
                         </div>
                         <!-- Furniture all cards -->
-                        <div class="grid grid-cols-3 gap-5">
+                        <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 lg:gap-5 md:gap-10 gap-5">
                             <!-- Furniture card 1 -->
                             <div class="card card-compact p-7 bg-base-100 shadow-sm cursor-pointer" onclick="cardBtn(this)">
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod7.png" alt="Shoes" /></figure>
@@ -202,7 +204,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-1/4 mt-32 mx-3">
+                <div class="lg:w-1/4 lg:mt-32 md:mt-14 mt-10 lg:mx-3 mx-10">
                     <div class="h-40 bg-white p-5 rounded-lg">
                         <h3 class="text-xl font-semibold mb-3">Have coupon?</h3>
                         <div class="join">
@@ -210,7 +212,7 @@
                             <button id="coupon-btn" class="btn join-item rounded-r-lg bg-[#E527B2] text-white hover:text-black" disabled>Apply</button>
                           </div>
                     </div>
-                    <div class="h-96 bg-white p-5 mt-5 rounded-lg">
+                    <div class="h-[450px] bg-white p-5 mt-5 rounded-lg">
                         <div id="products-list">
                             <h2 class="text-xl font-bold mb-2">Product list</h2>
 
