change the name of product rating

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h6 class="font-semibold text-base">---SALE FEVER---</h6>
                     <h2 class="lg:text-5xl md:text-5xl text-3xl font-bold lg:my-8 my-5 leading-tight">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h2>
                     <p class="text-base font-semibold inline mr-3">Use Promo Code</p>
-                    <button class="bg-[#E527B2] text-white py-2 px-8 rounded-lg font-medium inline">SELL200</button>
+                    <h3 class="bg-[#E527B2] text-white py-2 px-8 rounded-lg font-medium inline">SELL200</h3>
                 </div>
                 <div class="flex justify-center mb-7 lg:mb-0">
                     <img src="images/Summer 1.png" alt="" class="lg:w-4/5 w-3/5 self-center">
@@ -51,11 +51,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod1.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">K. Spon Accessories</h2>
                                     <p id="product-price" class="text-base text-gray-400">39.00 TK</p>
@@ -66,11 +66,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod2.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="k-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">K. Accessories</h2>
                                     <p class="text-base text-gray-400">25.00 TK</p>
@@ -81,11 +81,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod3.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="home-cooker-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="home-cooker-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="home-cooker-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="home-cooker-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="home-cooker-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Home Cooker</h2>
                                     <p class="text-base text-gray-400">49.00 TK</p>
@@ -106,11 +106,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod4.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Sports Back Cap</h2>
                                     <p class="text-base text-gray-400">39.00 TK</p>
@@ -121,11 +121,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod5.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Full Jersey Set</h2>
                                     <p class="text-base text-gray-400">25.00 TK</p>
@@ -136,11 +136,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod6.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Sports cates</h2>
                                     <p class="text-base text-gray-400">49.00 TK</p>
@@ -161,11 +161,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod7.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Single Relax Chair</h2>
                                     <p class="text-base text-gray-400">39.00 TK</p>
@@ -176,11 +176,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod8.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" checked />
                                     </div>
                                     <h2 class="card-title block">Children play</h2>
                                     <p class="text-base text-gray-400">25.00 TK</p>
@@ -191,11 +191,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod9.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" checked />
                                     </div>
                                     <h2 class="card-title block">Flexible Sofa</h2>
                                     <p class="text-base text-gray-400">49.00 TK</p>
