change some JS code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
         <section class="container max-w-7xl mx-auto">
-            <div class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
+            <div id="product-container" class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
                 <div class="lg:w-3/4">
                     <!-- Kitchenware container -->
                     <div class="py-14 mx-10 lg:mx-0">
@@ -218,7 +218,7 @@
 
                         </div>
                         <div class="border-y py-3 my-3">
-                            <p class="mb-2"><strong>Total Price:</strong> <span class="text-gray-400">00 </span><span class="text-gray-400">TK</span></p>
+                            <p class="mb-2"><strong>Total Price:</strong> <span id="total-price" class="text-gray-400">00 </span><span class="text-gray-400">TK</span></p>
                             <p class="mb-2"><strong>Discount:</strong> <span id="discount" class="text-gray-400">00 <span>TK</span class="text-gray-400"></span></p>
                             <p class="mb-2"><strong>Total:</strong> <span id="grand-total" class="text-gray-400">00 </span><span class="text-gray-400">TK</span></p>
                         </div>
