change the price of the product

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
               </div>
         </section>
 
-
+        <!-- product and cart section -->
         <section class="container max-w-7xl mx-auto">
+            <!-- product card container -->
             <div id="product-container" class="flex flex-col-reverse md:flex-col-reverse lg:flex-row">
                 <div class="lg:w-3/4">
                     <!-- Kitchenware container -->
@@ -113,7 +114,7 @@
                                         <input type="radio" name="back-cap-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Sports Back Cap</h2>
-                                    <p class="text-base text-gray-400">39.00 TK</p>
+                                    <p class="text-base text-gray-400">49.00 TK</p>
                                 </div>
                             </div>
                             <!-- Sportswear card 2 -->
@@ -128,7 +129,7 @@
                                         <input type="radio" name="jersey-set-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Full Jersey Set</h2>
-                                    <p class="text-base text-gray-400">25.00 TK</p>
+                                    <p class="text-base text-gray-400">59.00 TK</p>
                                 </div>
                             </div>
                             <!-- Sportswear card 3 -->
@@ -143,7 +144,7 @@
                                         <input type="radio" name="sports-cates-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Sports cates</h2>
-                                    <p class="text-base text-gray-400">49.00 TK</p>
+                                    <p class="text-base text-gray-400">159.00 TK</p>
                                 </div>
                             </div>
                         </div>
@@ -168,7 +169,7 @@
                                         <input type="radio" name="Relax-chair-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">Single Relax Chair</h2>
-                                    <p class="text-base text-gray-400">39.00 TK</p>
+                                    <p class="text-base text-gray-400">185.00 TK</p>
                                 </div>
                             </div>
                             <!-- Furniture card 2 -->
@@ -183,7 +184,7 @@
                                         <input type="radio" name="children-play-rating" class="mask mask-star-2 bg-orange-400" checked />
                                     </div>
                                     <h2 class="card-title block">Children play</h2>
-                                    <p class="text-base text-gray-400">25.00 TK</p>
+                                    <p class="text-base text-gray-400">299.00 TK</p>
                                 </div>
                             </div>
                             <!-- Furniture card 3 -->
@@ -198,7 +199,7 @@
                                         <input type="radio" name="flexible-sofa-rating" class="mask mask-star-2 bg-orange-400" checked />
                                     </div>
                                     <h2 class="card-title block">Flexible Sofa</h2>
-                                    <p class="text-base text-gray-400">49.00 TK</p>
+                                    <p class="text-base text-gray-400">339.00 TK</p>
                                 </div>
                             </div>
                         </div>
