fix a responsive issue for mobile device

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <div class="h-40 bg-white p-5 rounded-lg">
                         <h3 class="text-xl font-semibold mb-3">Have coupon?</h3>
                         <div class="join">
-                            <input id="coupon-field" class="input input-bordered join-item" placeholder="Coupon code"/>
+                            <input id="coupon-field" class="input input-bordered join-item w-[185px]" placeholder="Coupon code"/>
                             <button id="coupon-btn" class="btn join-item rounded-r-lg bg-[#E527B2] text-white hover:text-black" disabled>Apply</button>
                           </div>
                     </div>
