change text spelling

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                                 <figure class="bg-slate-100 rounded-lg py-8"><img src="/images/prod1.png" alt="Shoes" /></figure>
                                 <div class="card-body text-center">
                                     <div class="rating block">
-                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" checked />
-                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
-                                        <input type="radio" name="k-spon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spoon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spoon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spoon-rating" class="mask mask-star-2 bg-orange-400" checked />
+                                        <input type="radio" name="k-spoon-rating" class="mask mask-star-2 bg-orange-400" />
+                                        <input type="radio" name="k-spoon-rating" class="mask mask-star-2 bg-orange-400" />
                                     </div>
                                     <h2 class="card-title block">K. Spon Accessories</h2>
                                     <p id="product-price" class="text-base text-gray-400">39.00 TK</p>
